修改配置文件

--- a/docker_conf/nginx/conf.d/dongt.b.api.d.b2c.com.conf
+++ b/docker_conf/nginx/conf.d/dongt.b.api.d.b2c.com.conf
@@ -1,7 +1,7 @@
 server {
 	listen 80 ;
 	server_name dongt.b.api.d.b2c.com;
-	root /var/www/dongt.b.api.d.b2c.srv/public;
+	root /var/www/b-api.d.b2c.srv/public;
 	index index.php index.html index.htm;
 
 	location / {
