--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,19 +4,11 @@ nginx:
         - "80:80"
     links:
         - "phpfpm"
-        - "golang"
+        # - "golang"
     extra_hosts:
-#        - "dongt.b.api.d.b2c.com:127.0.0.1"
-#        - "mall.d.mi.com:172.17.0.6"
-        - "dongt.api.d.b2c.com:172.17.0.5"
-        - "b-api.n.b2c.srv:10.237.39.47"
-        - "b-api.d.b2c.srv:10.108.230.3"
-        - "api.d.b2c.srv:10.108.163.40"
-        - "api.d.t.n.b2c.srv:10.39.1.6"
-        - "casdev.mioffice.cn:10.237.33.100"
-        - "shopapi.test.b2c.srv:10.39.1.6"
+        - "dongt.b.api.d.b2c.com:127.0.0.1"
     volumes:
-        - /var/www:/var/www
+        - /usr/local/var/www:/var/www
 
 phpfpm:
     build: ./php/7.1-fpm
@@ -25,18 +17,18 @@ phpfpm:
     links:
         - "mysql"
         - "redis"
-    extra_hosts:
-        - "dongt.b.api.d.b2c.com:172.17.0.6"
+    # extra_hosts:
+        # - "dongt.b.api.d.b2c.com:172.17.0.5"
         # - "mall.d.mi.com:172.17.0.6"
         # - "dongt.api.d.b2c.com:172.17.0.6"
-        - "b-api.n.b2c.srv:10.237.39.47"
-        - "b-api.d.b2c.srv:10.108.230.3"
-        - "api.d.b2c.srv:10.108.163.40"
-        - "api.d.t.n.b2c.srv:10.39.1.6"
-        - "casdev.mioffice.cn:10.237.33.100"
-        - "shopapi.test.b2c.srv:10.39.1.6"
+        # - "b-api.n.b2c.srv:10.237.39.47"
+        # - "b-api.d.b2c.srv:10.108.230.3"
+        # - "api.d.b2c.srv:10.108.163.40"
+        # - "api.d.t.n.b2c.srv:10.39.1.6"
+        # - "casdev.mioffice.cn:10.237.33.100"
+        # - "shopapi.test.b2c.srv:10.39.1.6"
     volumes:
-        - /var/www:/var/www
+        - /usr/local/var/www:/var/www
     cap_add:
         - ALL
     privileged: true
@@ -46,7 +38,7 @@ mysql:
     ports:
         - "3307:3306"
     volumes:
-        - /var/www/docker_conf/mysql/mysql_data:/var/lib/mysql
+        - /usr/local/var/www/mysql_data:/var/lib/mysql
     environment:
         - MYSQL_ROOT_PASSWORD=root
 
@@ -55,12 +47,12 @@ redis:
     ports:
         - "6380:6379"
 
-golang:
-    build: ./golang/1.8
-    ports:
-        - "6688:6688"
-    links:
-        - "mysql"
-    volumes:
-        - /var/www/go/src:/go/src
-    tty: true
+# golang:
+#     build: ./golang/1.8
+#     ports:
+#         - "6688:6688"
+#     links:
+#         - "mysql"
+#     volumes:
+#         - /usr/local/var/www/go/src:/go/src
+#     tty: true
