--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ nginx:
     #extra_hosts:
     #    - "dongt.b.api.d.b2c.com:127.0.0.1"
     volumes:
-        - /home/jianwei/code/xiaomi:/var/www
+        - /Users/daemoncoder/code/xiaomi:/var/www
 
 phpfpm:
     build: ./php/7.1-fpm
@@ -17,9 +17,9 @@ phpfpm:
     links:
         - "mysql"
         - "redis"
-        # - "soa-agent"
-    extra_hosts:
-        - "dongt.b.api.d.b2c.com:172.17.0.6"
+        - "soa-agent"
+    #extra_hosts:
+        #- "dongt.b.api.d.b2c.com:172.17.0.6"
         # - "mall.d.mi.com:172.17.0.6"
         # - "dongt.api.d.b2c.com:172.17.0.6"
         # - "b-api.n.b2c.srv:10.237.39.47"
@@ -29,7 +29,7 @@ phpfpm:
         # - "casdev.mioffice.cn:10.237.33.100"
         # - "shopapi.test.b2c.srv:10.39.1.6"
     volumes:
-        - /home/jianwei/code/xiaomi:/var/www
+        - /Users/daemoncoder/code/xiaomi:/var/www
     cap_add:
         - ALL
     privileged: true
@@ -39,7 +39,7 @@ mysql:
     ports:
         - "3307:3306"
     volumes:
-        - /home/jianwei/code/xiaomi/b-d-mi-com/doc/docker/mysql_data:/var/lib/mysql
+        - /Users/daemoncoder/code/xiaomi/b2c-back/b-d-mi-com/doc/docker/mysql_data:/var/lib/mysql
     environment:
         - MYSQL_ROOT_PASSWORD=root
 
@@ -48,17 +48,26 @@ redis:
     ports:
         - "6380:6379"
 
-# golang:
-#     build: ./golang/1.8
+
+# ubuntu_go:
+#     build: ./ubuntu_go
+#     volumes:
+#         - /Users/daemoncoder/code/xiaomi:/code
 #     ports:
-#         - "6688:6688"
+#         - "10501:10500" 
+#         - "8001:8000"
+#     environment:
+#         - GOROOT=/usr/local/go 
+#         - GOBIN=$GOROOT/bin 
+#         - PATH=$GOBIN:$PATH
+#         - GOXMLIB=/code/xmlib
+#         - KOALA=/code/koala
+#         - PFPATH=/code/service
 #     links:
 #         - "mysql"
-#     volumes:
-#         - /usr/local/var/www/go/src:/go/src
-#     tty: true
 
-# soa-agent:
-#    build: ./soa_agent
+
+soa-agent:
+   build: ./soa_agent
 #    volumes:
-#        - /home/jianwei/code/xiaomi/soa-agent:/home/soa-agent
+#        - /Users/daemoncoder/code/xiaomi/soa-agent:/home/soa-agent
